--- a/style/header.css
+++ b/style/header.css
@@ -7,6 +7,7 @@ h1 {
 }
 body {
 	font-family: fantasy;
+	color: blue;
 	background-image: url("../page_images/not2.png");
 	background-repeat: no-repeat;
 	background-position: center center;
@@ -21,4 +22,5 @@ body {
 }
 .status_time {
 	font-size: .8em;
+	color: black;
 }
